Rename project from EDITH-MD to ADNAN-MD

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EDITH-MD",
+  "name": "ADNAN-MD",
   "version": "1.0.0",
   "description": "WhatsApp Bot created By Bandaheali.",
   "main": "index.js",
